--- a/FinalProjectVR/Views/_ViewImports.cshtml
+++ b/FinalProjectVR/Views/_ViewImports.cshtml
@@ -10,5 +10,6 @@
 @using DTOLayer.BlogDTO
 @using DTOLayer.MembershipDTO
 @using DTOLayer.OrderDTO
+@using DTOLayer.AboutDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
