--- a/FinalProjectVR/Areas/Admin/Views/Pricing/AddPricing.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Pricing/AddPricing.cshtml
@@ -5,12 +5,12 @@
     <div class="col-md-4">
         <form asp-action="AddPricing" method="post">
             <div class="form-group">
-                <label asp-for="Title"></label>
+                <label asp-for="Title">Başlıq</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price"></label>
+                <label asp-for="Price">Qiymət</label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
