--- a/FinalProjectVR/Areas/Admin/Views/Shared/Components/AdminLastBlog/Default.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/Components/AdminLastBlog/Default.cshtml
@@ -1,28 +1,28 @@
-﻿@model List<BlogDTOs>
+﻿@model BlogDTOs
 
 
 @{
     Layout = null;
 }
 
-@foreach(var item in Model)
-{
-
-<div class="card shadow mb-4">
-    <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">@item.Title</h6>  <p class="data">@item.CreateTime.ToString("dd.MM.yyyy")</p>
-    </div>
-    <div class="card-body">
-        <div class="text-center">
-            <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-                 src="@item.ImageUrl" alt="...">
-        </div>
-        <p>
-           @item.Text
-        </p>
-            <a target="_blank" rel="nofollow" href="~/Blog/BlogDetail/@item.Id">
-             Bloga Get
-        </a>
-    </div>
-</div>
+@{
+    string trimmedText = Model.Text.Length > 150 ? Model.Text.Substring(0, 150) + "..." : Model.Text;
 }
+
+<div class="ak-height-75 ak-height-lg-80"></div>
+<section class="container">
+    <div class="blog-feature">
+        <div class="feature-content" data-aos="fade-right" data-aos-delay="600">
+            <p class="data">@Model.CreateTime.ToString("dd.MM.yyyy")</p>
+            <h4 class="title">@Model.Title</h4>
+            <p class="desp">
+                @trimmedText
+            </p>
+            <a href="~/Blog/BlogDetail/@Model.Id" class="more-btn">Davamını Oxu</a>
+        </div>
+        <div class="feature-img" data-aos="fade-left" data-aos-delay="600">
+            <img src="~/web-cras-three.vercel.app/assets/img/blog-show.jpg" class="ak-bg" alt="...">
+        </div>
+    </div>
+</section>
+
