--- a/FinalProjectVR/Views/Pricing/Order.cshtml
+++ b/FinalProjectVR/Views/Pricing/Order.cshtml
@@ -1,7 +1,4 @@
-﻿﻿@using DTOLayer
-@using EntityLayer.Models
-
-@model Order
+﻿@model OrderCreateDTOs
 @{
     ViewData["Title"] = "Order";
     Layout = "~/Views/Shared/_Layout.cshtml";
