--- a/FinalProjectVR/Areas/Admin/Views/Pricing/AddPricing.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Pricing/AddPricing.cshtml
@@ -11,7 +11,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price">Qiymət</label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" type="number" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
