--- a/FinalProjectVR/Areas/Admin/Views/Blog/AddBlog.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Blog/AddBlog.cshtml
@@ -13,6 +13,7 @@
             <div class="form-group">
                 <label asp-for="Text" class="control-label">Text</label>
                 <textarea asp-for="Text" class="form-control" > </textarea>
+               @*  <textarea name="Text"></textarea> *@
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
             <div class="form-group">
