--- a/FinalProjectVR/Views/Shared/Components/LastBlog/Default.cshtml
+++ b/FinalProjectVR/Views/Shared/Components/LastBlog/Default.cshtml
@@ -1,22 +1,22 @@
-﻿@model CoreLayer.Results.Concrete.SuccessDataResult<DTOLayer.BlogDTO.BlogDTOs>
+﻿@model BlogDTOs
 
 @{
-    string trimmedText = Model.Data.Text.Length > 150 ? Model.Data.Text.Substring(0, 150) + "..." : Model.Data.Text;
+    string trimmedText = Model.Text.Length > 200 ? Model.Text.Substring(0, 200) + "..." : Model.Text;
 }
 
 <div class="ak-height-75 ak-height-lg-80"></div>
 <section class="container">
     <div class="blog-feature">
         <div class="feature-content" data-aos="fade-right" data-aos-delay="600">
-            <p class="data">@Model.Data.CreateTime.ToString("dd.MM.yyyy")</p>
-            <h4 class="title">@Model.Data.Title</h4>
+            <p class="data">@Model.CreateTime.ToString("dd.MM.yyyy")</p>
+            <h4 class="title">@Model.Title</h4>
             <p class="desp">
-                @trimmedText
+               @Html.Raw(trimmedText)
             </p>
-            <a href="~/Blog/BlogDetail/@Model.Data.Id" class="more-btn">Davamını Oxu</a>
+            <a href="~/Blog/BlogDetail/@Model.Id" class="more-btn">Davamını Oxu</a>
         </div>
         <div class="feature-img" data-aos="fade-left" data-aos-delay="600">
-            <img src="@Model.Data.ImageUrl" class="ak-bg" alt="...">
+            <img src="@Model.ImageUrl" style="width: 663px; height: 387px;" class="ak-bg" alt="...">
         </div>
     </div>
 </section>
