Added Role ,Role Assign

--- a/FinalProjectVR/Areas/Admin/Views/Shared/Components/AdminLastBlog/Default.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/Components/AdminLastBlog/Default.cshtml
@@ -21,7 +21,7 @@
             <a href="~/Blog/BlogDetail/@Model.Id" class="more-btn">Davamını Oxu</a>
         </div>
         <div class="feature-img" data-aos="fade-left" data-aos-delay="600">
-            <img src="~/web-cras-three.vercel.app/assets/img/blog-show.jpg" class="ak-bg" alt="...">
+            <img src="@Model.ImageUrl" class="ak-bg" alt="...">
         </div>
     </div>
 </section>
