--- a/FinalProjectVR/Views/Account/Login.cshtml
+++ b/FinalProjectVR/Views/Account/Login.cshtml
@@ -6,6 +6,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<p style="color: black;">
+    Admin@gmail.com /
+    admin123_
+</p>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,8 +65,8 @@
                                         </div>
                                         <div class="form-group">
                                             <input class="form-control form-control-user"
-                                                   asp-for="Password" placeholder="Password">
-                                            <span asp-validation-for="Password" class="text-danger"></span>
+                                                   asp-for="Password" placeholder="Password" type="password">
+                                            <span asp-validation-for="Password" class="text-danger" ></span>
                                         </div>
                                         <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Daxil Ol
