--- a/FinalProjectVR/Views/ErrorPage/Error1.cshtml
+++ b/FinalProjectVR/Views/ErrorPage/Error1.cshtml
@@ -24,7 +24,7 @@
 				<h1>404</h1>
 				<h2>Xətaaaaa</h2>
 			</div>
-			<a href="~/About/Index">Ana Səyfə</a>
+			<a href="~/Home/Index">Ana Səyfə</a>
 		</div>
 	</div>
 
