--- a/FinalProjectVR/Views/Shared/_Layout.cshtml
+++ b/FinalProjectVR/Views/Shared/_Layout.cshtml
@@ -94,12 +94,12 @@
                         </div>
                     </div>
                     <div class="ak-main-header-right">
-                        <a href="tel:+994 51-411-21-03">
+                        <a asp-controller="Dashboard" asp-action="Index" asp-area="Admin">
                             <div class="d-flex align-items-center gap-3">
                                 <div class="heartbeat-icon">
                                     <span class="ak-heartbeat-btn"><img src="~/web-cras-three.vercel.app/assets/img/phone.svg" alt="..."></span>
                                 </div>
-                                <h6> +994 51-411-21-03</h6>
+                                <h6>Admin</h6>
                             </div>
                         </a>
                     </div>
