--- a/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -118,6 +118,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" asp-action="Index" asp-controller="AdminRole">
+                    <i class="fas fa-envelope-open"></i>
+                    <span>Admin</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" asp-action="Index" asp-controller="Home" asp-area="" target="_blank">
                     <i class="fas fa-home"></i>
                     <span>Ana Səyfə</span>
