--- a/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
+++ b/FinalProjectVR/Areas/Admin/_ViewImports.cshtml
@@ -10,4 +10,7 @@
 @using DTOLayer.TestimonialDTO
 @using DTOLayer.CommentDTO
 @using DTOLayer.EmailSubscriptionDTO
+@using EntityLayer.Membership
+
+@using DTOLayer.MembershipDTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
