--- a/FinalProjectVR/Areas/Admin/Views/AdminRole/AssignRole.cshtml
+++ b/FinalProjectVR/Areas/Admin/Views/AdminRole/AssignRole.cshtml
@@ -6,7 +6,12 @@
 
 <h1>Assign Roles</h1>
 
-<form method="post" >
+@if (Model.Any(m => m.Name == "Creator" && m.Exists))
+{
+    <h1>Creator</h1>
+}
+
+<form method="post">
     <div class="row">
         <div class="col-md-12">
             <table class="table">
@@ -19,23 +24,25 @@
                 <tbody>
                     @for (int i = 0; i < Model.Count; i++)
                     {
-                        <tr>
-                            <td>@Model[i].Name</td>
-                            <td>
-                                <div class="form-check">
-                                    <input type="hidden" asp-for="@Model[i].RoleId" />
-                                    <input type="hidden" asp-for="@Model[i].Name" />
-                                    <input type="checkbox" asp-for="@Model[i].Exists" class="form-check-input" />
-                                </div>
-                            </td>
-                        </tr>
+                        if (Model[i].Name != "Creator")
+                        {
+                            <tr>
+                                <td>@Model[i].Name</td>
+                                <td>
+                                    <div class="form-check">
+                                        <input type="hidden" asp-for="@Model[i].RoleId" />
+                                        <input type="hidden" asp-for="@Model[i].Name" />
+                                        <input type="checkbox" asp-for="@Model[i].Exists" class="form-check-input" />
+                                    </div>
+                                </td>
+                            </tr>
+                        }
                     }
                 </tbody>
             </table>
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">Yadda saxla</button>
-
+    <button type="submit" class="btn btn-primary">@DefaultConstantValue.ADD_MESSAGE</button>
     <a asp-action="UserRoleList" class="btn btn-secondary">@DefaultConstantValue.RETURN_TO_BACK1</a>
 </form>
