VIN Decoder Added(RapidApi)

--- a/FinalProjectVR/Views/Shared/_Layout.cshtml
+++ b/FinalProjectVR/Views/Shared/_Layout.cshtml
@@ -70,6 +70,10 @@
                                 <li>
                                     <a asp-controller="Team" asp-action="Index" class="text-hover-animaiton">Komandamız</a>
                                 </li>
+                                <li>
+                                    <a asp-controller="VINDecoder" asp-action="Index" class="text-hover-animaiton">VIN Sorğulama</a>
+                                </li>
+
                                 <li class="menu-item-has-children">
                                     <a asp-controller="Pricing" asp-action="Index" class="text-hover-animaiton">Qiymətlərimiz</a>
                                     <ul>
@@ -99,7 +103,7 @@
                                 <div class="heartbeat-icon">
                                     <span class="ak-heartbeat-btn"><img src="~/web-cras-three.vercel.app/assets/img/phone.svg" alt="..."></span>
                                 </div>
-                                <h6>Admin</h6>
+                                <h6>LogIn</h6>
                             </div>
                         </a>
                     </div>
